--- a/public/styles/_core/variables.scss
+++ b/public/styles/_core/variables.scss
@@ -1,10 +1,10 @@
 // Images
 $background-main: url(https://res.cloudinary.com/engagement-lab-home/image/upload/v1/emerging-citizens/images/layout/htyi/background_tileable.png);
-$player-one-logo: url(https://res.cloudinary.com/engagement-lab-home/image/upload/v1486743670/at-stake/yellow_avatar.png);
-$player-two-logo: url(https://res.cloudinary.com/engagement-lab-home/image/upload/v1486743596/at-stake/avatar_green.png);
-$player-three-logo: url(https://res.cloudinary.com/engagement-lab-home/image/upload/v1486743592/at-stake/avatar_pink.png);
-$player-four-logo: url(https://res.cloudinary.com/engagement-lab-home/image/upload/v1486743590/at-stake/avatar_red.png);
-$player-five-logo: url(https://res.cloudinary.com/engagement-lab-home/image/upload/v1486743594/at-stake/avatar_orange.png);
+$player-one-logo: url(https://res.cloudinary.com/engagement-lab-home/image/upload/v1486743670/at-stake/playericons/player-1.png);
+$player-two-logo: url(https://res.cloudinary.com/engagement-lab-home/image/upload/v1486743596/at-stake/playericons/avatar_green.png);
+$player-three-logo: url(https://res.cloudinary.com/engagement-lab-home/image/upload/v1486743592/at-stake/playericons/avatar_pink.png);
+$player-four-logo: url(https://res.cloudinary.com/engagement-lab-home/image/upload/v1486743590/at-stake/playericons/avatar_red.png);
+$player-five-logo: url(https://res.cloudinary.com/engagement-lab-home/image/upload/v1486743594/at-stake/playericons/avatar_orange.png);
 
 
 // Colors
@@ -23,22 +23,31 @@ $light-blue: #57e2ff;
 $dark-blue: #20b5e6;
 $type-blue: #006f93;
 $white: #ffffff;
+$light-gold: #ffd461;
+$aquamarine: #00dcba;
+$sunflower: #ffbe0f;
+$blue-violet: #5c00d6;
+$pumpkin-orange: #ff7800;
+$pink-red: #e90048;
+$cerulean: #0098d0;
+$dark-sky-blue: #20b5e6;
 
 // Player One
-$player-blue: #35AFD2;
-$player-blue-tint: #85CFE6;
-// Player Two
-$player-green: #3EB7A1;
-$player-green-tint: #85D3C5;
-// Player Three 
-$player-pink: #B84B88;
-$player-pink-tint: #D493B8;
-// Player Four
-$player-red: #B84D3D;
-$player-red-tint: #D49589;
-// Player Five
-$player-purple: #B048E7;
-$player-purple-tint: #D090EF; 
+// $player-blue: #35AFD2;
+// $player-blue-tint: #85CFE6;
+// // Player Two
+// $player-green: #3EB7A1;
+// $player-green-tint: #85D3C5;
+// // Player Three 
+// $player-pink: #B84B88;
+// $player-pink-tint: #D493B8;
+// // Player Four
+// $player-red: #B84D3D;
+// $player-red-tint: #D49589;
+// // Player Five
+// $player-purple: #B048E7;
+// $player-purple-tint: #D090EF; 
+
 
 // Heights
 $nav-height: 50px;
