--- a/public/styles/core.scss
+++ b/public/styles/core.scss
@@ -3,6 +3,7 @@
 @import "_core/mixins";
 @import "_core/functions";
 @import "_core/forms";
+@import "_core/lobby";
 @import "_core/playerview";
 @import "_core/comingsoon";
 @import "_core/homepage";
