--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -109,9 +109,9 @@
                     
                 </footer>
 
-                <div class="form next decider row" id="decider-controls" style="display:none;">
+                {{!-- <div class="form next decider row" id="decider-controls" style="display:none;">
                     <input id="btn-next" data-keep_enabled="true" data-event="game:next" class="submit" type="submit" name="submit" value="next">
-                </div>
+                </div> --}}
 
                 {{#ifeq debug true}}
                     {{#ifnoteq viewType 'decider'}}
