--- a/templates/partials/script/development.hbs
+++ b/templates/partials/script/development.hbs
@@ -30,7 +30,7 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.2/TweenMax.min.js"></script>
 
 {{!-- Socket.io --}}
-<script type="text/javascript" src="/socket.io/socket.io.js"></script>
+<script type="text/javascript" src="/at-stake-socket/socket.io.js"></script>
 
 {{!-- Sound --}}
 <script type="text/javascript" src="/bower_components/ion-sound/js/ion.sound.js"></script>
