--- a/templates/partials/script/player_events.hbs
+++ b/templates/partials/script/player_events.hbs
@@ -130,11 +130,10 @@ socketEvents = function(eventId, eventData) {
 
             _.each(currentPlayers, function(player, index) {
 
-            console.log(player);
-
                 var nameFormatted = (player.name.length <= 15) ? player.name : player.name.substring(0, 15) + "...";
+                var index = player.icon;
 
-                $('#players').append('<div class="col-sm-12 player-logo"><div class="logo" id="player-' + player.icon + '"></div><p>' + nameFormatted + '</p></div>');
+                $('#players').append('<div id="player-' + index + '" class="col-sm-12 player-logo"><p>' + nameFormatted + '</p></div>');
 
             });
 
@@ -181,7 +180,9 @@ socketEvents = function(eventId, eventData) {
                 rulesAnim();
 
                 if(isDecider)
-                    $('#decider-controls, #decider').show();
+                    $('.player').remove();
+                else
+                    $('.decider').remove();
 
                 $('#gameContent').addClass('in-game');
 
