--- a/templates/partials/shared/meet.hbs
+++ b/templates/partials/shared/meet.hbs
@@ -12,9 +12,9 @@
 			<div>Press the Role Card buton on the bottom of the screen to review your title and bio.</div>
 		</section>
 
-		<blockquote class="speech decider">
+		<blockquote class="speech decider form">
         <p>"Everyone open your role card using the button at the bottom of your screen and review your character role. You will be playing from this character's perspective this round."</p>
-			<button id="next">next</button>
+			<button id="next" class="submit">next</button>
     </blockquote>
 		<blockquote class="speech player">
 			<p>"Everyone open your role card using the button at the bottom of your screen and review your character role. You will be playing from this character's perspective this round."</p>
