--- a/public/styles/_core/playerview.scss
+++ b/public/styles/_core/playerview.scss
@@ -67,7 +67,7 @@
 }
 
 .form {
-	&.decider, &#decider, &#decider-controls {
+	&#decider, &#decider-controls {
 		position: absolute;
 		bottom: 0px;
 		width: 100%;
@@ -169,6 +169,16 @@ input.post-button {
 	color: white;
 }
 
+// Player role card
+#role-card {
+	position: absolute;
+	display: none;
+	width: 100%;
+  height: 100%;
+  background: $color-orange;
+  z-index: 1000;
+}
+
 #rules {
 	height: 100%;
 	.screen {
@@ -239,5 +249,5 @@ footer#bottom-bar {
 	font-size: large;
 	width: 100%;
 	bottom: 0px;
-	position: absolute;
+	position: fixed;
 }
