--- a/templates/partials/script/player_logic.hbs
+++ b/templates/partials/script/player_logic.hbs
@@ -53,7 +53,7 @@ $(document).on('click touchstart', 'div.error', function() {
 });
 
 // Do not enable sound for emulated (debug) player
-if(!isEmulated) {
+/*if(!isEmulated) {
 
     ion.sound({
     sounds: [
@@ -68,7 +68,7 @@ if(!isEmulated) {
 
 }
 else
-    $('#debugging').remove();
+    $('#debugging').remove();*/
 
 /*
     Logs the player in
@@ -128,6 +128,8 @@ var checkIfLoggedIn = function() {
         // Login form animation
         if(!isEmulated)
             loginEnterName();
+        else
+            $('#player-name, #btn_submit_name').removeClass('hidden-el');
 
         // For Android only, move input boxes into view on phones
         if(isAndroid) {
@@ -273,7 +275,7 @@ $(document).on('click', '.btn.game_login', function(evt) {
             }
 
             $('.login.input').fadeOut(function() {
-                $('#begin').addClass('wait');
+                $('#lobby').addClass('wait');
                 $('.login.waiting').fadeIn();
             });
 
