--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -44,6 +44,21 @@
             <div id="overlay" class="modal">
             </div>
 
+            {{!-- STAGES BAR --}}
+            <section class="col-sm-12" id="stages-bar">
+
+                <span id="progress"></span>
+
+                <img src="/images/layout/stageicons/meet.svg" />
+                <img src="/images/layout/stageicons/brainstorm.svg" />
+                <img src="/images/layout/stageicons/pitch.svg" />
+                <img src="/images/layout/stageicons/deliberate.svg" />
+                <img src="/images/layout/stageicons/grandstand.svg" />
+                <img src="/images/layout/stageicons/decide.svg" />
+                <img src="/images/layout/stageicons/score.svg" />
+
+            </section>
+
             {{!-- ROLE CARD OVERLAY --}}
             <section class="col-sm-12" id="role-card">
 
