--- a/templates/partials/shared/meet.hbs
+++ b/templates/partials/shared/meet.hbs
@@ -32,6 +32,8 @@
 		<section class="instruction player">
 			<h1>Open your Role Card and review your role</h1>
 			<div>Press the Role Card buton on the bottom of the screen to review your title and bio.</div>
+			{{!-- 'Modifier' data tag modifies script behavior --}}
+   		<span id="modifier" class="hidden-el" data-highlight="#btn-role-card"></span>
 		</section>
 
 		<div class="speech decider form">
