--- a/public/styles/_core/playerview.scss
+++ b/public/styles/_core/playerview.scss
@@ -17,6 +17,25 @@
 
 	}
 
+	.header {
+		font-size: 24px;
+		text-align: center;
+		margin: 0px;
+	}
+	.subtitle {
+		font-size: 12px;
+		text-align: center;
+		margin: 0px;
+	}
+	.caption {
+		font-size: 12px;
+
+	}
+
+	.white {
+		color: white;
+	}
+
 	.light {
 		line-height: normal;
 	}
