--- a/templates/views/game/player.hbs
+++ b/templates/views/game/player.hbs
@@ -67,7 +67,7 @@
   <div class="lobby" id="decider" style="display:none">
     <div class="form create col-sm-12 col-lg-6 col-centered">
 
-      <h3>select a deck</h3>
+      <h3 class="white header">select a deck</h3>
       <div class="form-prompt white">Your deck will determine what problems you solve and what roles you get to play.</div>
       
       <section id="decks" class="glide">
