--- a/public/styles/_core/lobby.scss
+++ b/public/styles/_core/lobby.scss
@@ -200,7 +200,7 @@
 
 			button {
 				color: $color-turquoise;
-				margin: 5px 0px;
+				margin: 5px 5px;
 				padding: 5px;
 			}
 
@@ -212,13 +212,70 @@
 			.glide__slide {
 		  	.deck {
 			    font-size: small;
-			    background-color: white;
 			    color: black;
 			    margin: 1%;
 			    display: inline-block;
+			    background-color: #d8d8d8;
+			    box-shadow: 0 2px 4px 0 rgba(85, 85, 85, 0.25);
+			    border-radius: 5px;
+			    height:100%;
 
-					h3 {
-						font-size: 1em;
+					.deck-header {
+						background-color: $color-seafoam;
+						padding: 10px 0px;
+					}
+
+					.flag {
+						background-color: #949494;
+						box-shadow: inset 0 1px 3px 0 rgba(0, 0, 0, 0.5);
+					  border: solid 1px #ebebeb;
+					  margin: 4px;
+					}
+
+					.question {
+						height: 40px;
+						margin: 4px;
+					  border-radius: 20px;
+					  background-color: #00c2a9;
+					  border: solid 1px #ebebeb;
+					  text-align: left;
+					  color: white;
+
+					  :not(.num) {
+					  	margin: 4px 12px 4px 44px;
+					  }
+					  
+					  .num {
+					  	width: 40px;
+						  height: 40px;
+						  border-radius: 19px;
+						  background-color: #00dcba;
+						  border: solid 1px #ebebeb;
+						  float: left;
+						  font-size: 24px; 
+						  line-height: 24px;
+						  padding: 8px;
+						  text-align: center;
+					  }
+					}
+
+					.stakeholders {
+						width: 50%;
+						padding:0px;
+						display: inline-block;
+					}
+
+					.deck-role {
+						height: 24px;
+					  border-radius: 100px;
+					  background-color: #00c2a9;
+					  border: solid 1px #ffffff;
+					  display: block;
+					  font-size: 12px;
+				    color: white;
+				    padding: 4px;
+				    margin: 4px;
+
 					}
 
 				}
